<resources>
    <string name="app_name">设备绑定</string>
    <string name="start_Reg">开始接收</string>
    <string name="stop_Reg">停止接收</string>
    <string name="wifi_name">Wifi Name : </string>
    <string name="wifi_password">Wifi Password : </string>
    <string name="wifi_connect">开始连接</string>

    <!--Language Select-->
    <string name="select_language">语言选择</string>
    <string name="ensure_language">确定</string>

    <!--QRCode-->
    <string name="scan_QRCode_hint">手机扫描二维码安装手机端APP</string>
    <string name="enter_Bind_Btn">进入绑定模式</string>

    <!--Wifi-->
    <string name="connect_success_str">连接成功</string>
    <string name="disconnecting_str">连接失败</string>
    <string name="start_Conn">连接网络</string>
    <string name="connect_hint">请将手机靠近设备,调大音量,发送Wifi信息...</string>
    <string name="sin_msg">已收到Wifi信息,正在连接网络,请稍后...</string>
    <string name="next">下一步</string>
    <string name="pass">跳过</string>

    <!--Lenovo Id-->
    <string name="bind_success">配对成功</string>
    <string name="bind_fail">配对失败</string>
    <string name="start_Bind">设备配对</string>
    <string name="bind_hint">请将手机靠近设备,调大音量,发送账号信息...</string>
    <string name="user_id_msg">已收到账号信息,正在配对设备,请稍后...</string>
    <string name="go_Home">进入主页</string>
    <string name="app_lenovo_name">联想账号</string>

    <!--Wifi　Connect-->
    <string name="wlan_connect">无线局域网</string>
    <string name="search_wlan">正在搜索wlan网络...</string>
    <string name="password">密码</string>
    <string name="cancel">取消</string>
    <string name="ensure">确定</string>
    <string name="wifi_connected">已连接</string>

    <string name="menu_settings">Settings</string>
    <string name="info">该演示程序限制了编码和解码的次数，在识别n（n为随机值）次后程序会自动停止识别（如果发送的字符太长程序也不会发送），若想继续使用请重新启动该程序（商业正式版没有这个限制）,作者QQ:29600731。</string>
    <string name="init_str">009_@aazAZ</string>
    <string name="input_char">请输入数字、字母和_@</string>
</resources>

