<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/grep_background"
    tools:context="com.lenovo.devicecontrol.MainActivity">

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/connect_hint"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_sin_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/sin_msg"
        android:visibility="gone"/>


    <RelativeLayout
        android:id="@+id/rl_1"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/iv_bg_state"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_centerInParent="true"
            android:background="@mipmap/bg_blue_circle"
            />

        <com.lenovo.devicecontrol.view.WaveLineView
            android:id="@+id/mWaveLineView"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:visibility="gone"
            android:layout_centerInParent="true"/>

        <com.lenovo.devicecontrol.view.SeismicWave
            android:id="@+id/seismicwave"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:visibility="gone"
            android:layout_centerInParent="true"/>

        <ImageView
            android:id="@+id/iv_bg_circle_outside"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/bg_blue_circle_outside"
            />

        <Button
            android:id="@+id/start_Conn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/start_Conn" />

        <TextView
            android:id="@+id/tv_isSuccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/connect_success_str"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_isSuccess"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-10dp"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:visibility="gone"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/next_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone">

        <Button
            android:id="@+id/pass_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:background="@color/transparent"/>

        <Button
            android:id="@+id/next_Btn"
            android:layout_toRightOf="@+id/pass_Btn"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:background="@color/transparent"/>

    </RelativeLayout>

</RelativeLayout>
